--- a/style.css
+++ b/style.css
@@ -819,6 +819,7 @@
          height: 100vh;
          position: relative;
          overflow: hidden;
+          box-sizing: border-box;
      }
 
      .final-section-mobile .mobile-gradient {
